# PRTS-DevOps

./: .env.example  .gitignore  ARCHITECTURE_PLAN.md  README.md  docker-compose.yml  package-lock.json
backend/: pyproject.toml
backend/src/: __init__.py  main.py
backend/src/api/v1/: __init__.py  auth.py  monitoring.py  pipelines.py  projects.py  push.py
backend/src/core/: __init__.py  config.py  security.py
deploy/docker/: Dockerfile.backend  init-db.sql  nginx.conf  prometheus.yml
docs/: README.de.md  README.fr.md  README.ja.md  README.ru.md  README.zh-CN.md
ide/: package-lock.json  package.json  vite.config.ts
ide/electron/: main.ts  preload.ts
ide/src/: App.vue  main.ts
ide/src/views/: DevOpsView.vue  EditorView.vue  TerminalView.vue
native/: CMakeLists.txt
native/include/prts/: log.h  memory_pool.h  metrics.h  thread_pool.h  types.h
native/src/core/: memory_pool.c  ring_buffer.c  thread_pool.c
native/src/log/: indexer.c  parser.c
native/src/metrics/: aggregator.c  collector.c
native/src/platform/: darwin.c  linux.c  windows.c
phone-and-ipad/android/: pubspec.yaml
phone-and-ipad/ios/PRTS/: ContentView.swift  PRTSApp.swift
phone-and-ipad/ios/PRTS/Models/: Models.swift
phone-and-ipad/ios/PRTS/Services/: APIClient.swift
phone-and-ipad/ios/PRTS/Views/Alerts/: AlertsView.swift
phone-and-ipad/ios/PRTS/Views/Dashboard/: DashboardView.swift
phone-and-ipad/ios/PRTS/Views/Pipeline/: PipelineListView.swift
phone-and-ipad/ios/PRTS/Views/Projects/: ProjectsView.swift
phone-and-ipad/ios/PRTS/Widgets/: LiveActivityWidget.swift
